@@ -1,3 +1,9 @@
+2007-07-10  Ulrich Drepper  <drepper@redhat.com>
+
+	[BZ #4773]
+	* time/strptime_l.c (__strptime_internal): Implement greedy
+	matching of weekday and month names.
+
 2007-07-09  Roland McGrath  <roland@redhat.com>
 
 	* elf/elf.h (NT_GNU_ABI_TAG): New macro.
